@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-06T08:00:39Z",
-  "count_outdated" : 73,
-  "uniques_outdated" : 56,
-  "count" : 76,
-  "uniques" : 59,
+  "timestamp" : "2024-02-07T00:23:21Z",
+  "count_outdated" : 74,
+  "uniques_outdated" : 57,
+  "count" : 77,
+  "uniques" : 60,
   "clones" : [
-    {
-      "timestamp": "2024-01-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-04T00:00:00Z",
       "count": 1,
@@ -25,12 +16,12 @@
     },
     {
       "timestamp": "2024-02-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
