@@ -3,19 +3,14 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-01-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-02-04T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
       "timestamp": "2024-02-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
